Support target: :block in TracePoint#enable

This allows using the block passed to TracePoint#enable as the
target.  This allows for a nicer API than creating a
proc/lambda for the block and using enable(target: block, &block).

This is implemented in vm_trace.c and not trace_point.rb to
prevent additional TracePoint events from being issued for
checking whether the target is :block.

Fixes [Bug #16889]